--- a/talk_Bregar_heliconics.tex
+++ b/talk_Bregar_heliconics.tex
@@ -159,6 +159,13 @@
 
 \section{Band gap shifting}
 
+\begin{slide}{Methods}
+  \begin{itemize}
+    \item FDTD
+    \item MPB
+  \end{itemize}
+\end{slide}
+
 \begin{slide}{Analysis of $\vec{E}$ and $\vec{D}$ fields}
 \begin{columns}[c]
   \begin{column}{.78\textwidth}
@@ -288,43 +295,21 @@
 \section{Conclusion}
 
 \begin{slide}{Conclusion \& Outlook}
-Heliconical liquid crystals offer a possibility to control the properties of LC with external $\vec{E}_{ext}$:
+We determined the photonic properties of heliconical liquid crystals using numerical modelling: 
 \begin{itemize}
-  \item Tuning of photonic band gap with tuning $p$ and $\theta$: controllable transmission with $E_{ext}$
+  \item The dependence of the photonic band gap 
   \item Introduction of $E_z$ component: complex winding of beams
 \end{itemize}
 \end{slide}
 
 
-\begin{slide}{}
-\centering
-  \begin{overpic}[height=211pt]{./figures/ljubljana}
-  \put(40,52){Thank you!}
-  \end{overpic}
-\end{slide}
+% \begin{slide}{}
+% \centering
+%   \begin{overpic}[height=211pt]{./figures/ljubljana}
+%   \put(40,52){Thank you!}
+%   \end{overpic}
+% \end{slide}
 
-
-\appendix
-\backupbegin
-% And your backup slides here
-\begin{slide}{Methods}
-  \begin{itemize}
-    \item FDTD
-    \item MPB
-  \end{itemize}
-\end{slide}
-
-\begin{slide}{Free energy approach to heliconics}
-\end{slide}
-
-\begin{slide}{Analytical expressions for $\vec{E}$ inside heliconics}
-\end{slide}
-
-\begin{slide}{Winding of $\vec{P}_{xy}$ for different $\lambda/p$}
-\end{slide}
-
-
-\backupend
 
 
 \end{document}
@@ -472,6 +457,25 @@ Heliconical liquid crystals offer a possibility to control the properties of LC 
 %   
 % \end{slide}
 
+
+
+% SLAJDI ZA DODATEK (APPENDIX) -- da ti jih številči ločeno
+
+% \appendix
+% \backupbegin
+% 
+% 
+% \begin{slide}{Free energy approach to heliconics}
+% \end{slide}
+% 
+% \begin{slide}{Analytical expressions for $\vec{E}$ inside heliconics}
+% \end{slide}
+% 
+% \begin{slide}{Winding of $\vec{P}_{xy}$ for different $\lambda/p$}
+% \end{slide}
+% 
+% 
+% \backupend
 
 
 
