--- a/talk_Bregar_heliconics.tex
+++ b/talk_Bregar_heliconics.tex
@@ -295,10 +295,10 @@
 \section{Conclusion}
 
 \begin{slide}{Conclusion \& Outlook}
-We determined the photonic properties of heliconical liquid crystals using numerical modelling: 
+We determined the photonic properties of heliconical liquid crystals: 
 \begin{itemize}
-  \item The dependence of the photonic band gap 
-  \item Introduction of $E_z$ component: complex winding of beams
+  \item The opening of the photonic band gap
+  \item Analysis of $\vec{E}$ eigenmodes, the introduction of $E_z$ component
 \end{itemize}
 \end{slide}
 
