--- a/talk_Bregar_heliconics.tex
+++ b/talk_Bregar_heliconics.tex
@@ -113,8 +113,9 @@
     \end{column}
     \begin{column}{0.5\textwidth}
     \begin{center}
-      \begin{overpic}[height=60pt]{./figures/tunable-laser}
-      \put(-3,-6){\tiny Xiang et al., Proc. Natl. Acad. Sci. 113, 12925 (2016).}
+      \begin{overpic}[height=60pt]{./figures/borshch-heliconic.png}
+      \put(-3,-6){\tiny FFTEM images, a) $p=8.05\,\mathrm{nm}$, b) $p=9.3\mathrm{nm}$.}
+      \put(-3,-12){\tiny V. Borshch et al., Nat. Commun. 4, 2635 (2013). }
       \end{overpic}
     \end{center}
     \end{column}
