prej ni bilo final. Ampak zdej pa je.

--- a/talk_Bregar_heliconics.tex
+++ b/talk_Bregar_heliconics.tex
@@ -97,13 +97,13 @@
    \end{center}
 \end{column}
 \end{columns}
-\vspace{-0.4cm}
+
    \begin{itemize}
-    \item \noindent Two main types of systems: 1.: pitch $p \sim 10\, \mathrm{nm}$ (bent-core LC), 2.: $p$ in optical range (rod-like \& linked by flexible chain)
+    \item \noindent Two main size ranges: \\ 1.: pitch $p \sim 10\, \mathrm{nm}$ 2.: $p$ in optical range
     \end{itemize}
-    \vspace{-0.4cm}
+    \vspace{-1cm}
     \begin{columns}[c]
-    \begin{column}{0.5\textwidth}
+    \begin{column}{0.35\textwidth}
     \begin{center}
       \begin{overpic}[height=60pt]{./figures/tunable-small-pitch-clark}
        \put(10,-6) {\tiny FFTEM images, $p\approx 14 \, \mathrm{nm}$. }
@@ -111,13 +111,22 @@
       \end{overpic}
     \end{center}
     \end{column}
-    \begin{column}{0.5\textwidth}
+    \begin{column}{0.35\textwidth}
     \begin{center}
       \begin{overpic}[height=60pt]{./figures/borshch-heliconic.png}
       \put(-3,-6){\tiny FFTEM images, a) $p=8.05\,\mathrm{nm}$, b) $p=9.3\mathrm{nm}$.}
       \put(-3,-12){\tiny V. Borshch et al., Nat. Commun. 4, 2635 (2013). }
       \end{overpic}
     \end{center}
+    \end{column}
+    \begin{column}{0.25\textwidth}
+      \begin{center}
+      \begin{overpic}[height=60pt]{./figures/electrooptic-response-helicoid-v1}
+    %\put(12,-3) {\tiny Xiang, Shiyanovskii, Imrie, Lavrentovich, PRL 112, 217801 (2014). }
+      \put(10,-9) {\tiny Xiang et al., PRL 112, }
+      \put(10,-18){\tiny 217801 (2014). }
+      \end{overpic}
+      \end{center}
     \end{column}
     \end{columns}
 % %     \begin{exampleblock}{}
